--- a/app/globals.css
+++ b/app/globals.css
@@ -87,6 +87,10 @@
   font-weight: normal;
   font-style: normal;
 }
+*{
+  max-width: 100vw;
+}
 body * {
   font-family: "MyFont";
+  /* max-width: 100vw; */
 }
